RASS-108 get case outcomes from json file

--- a/server/views/pages/courtAppearance/overall-case-outcome.njk
+++ b/server/views/pages/courtAppearance/overall-case-outcome.njk
@@ -6,6 +6,37 @@
 
 {% set pageTitle = applicationName + " - Add a court case outcome" %}
 
+{% set radiosData = {
+                    name: "overallCaseOutcome",
+                    fieldset: {
+                        legend: {
+                        text: "Select the overall case outcome",
+                        isPageHeading: true,
+                        classes: "govuk-fieldset__legend--l"
+                        }
+                    },
+                    items: []
+    } %}
+
+{% for caseOutcome in topCaseOutcomes %}
+    {%- set caseOutcomeRow = {
+        value: caseOutcome.description,
+        text: caseOutcome.description,
+        checked: caseOutcome.description === overallCaseOutcome
+    } -%}
+    {{ radiosData.items.push(caseOutcomeRow) }}
+{% endfor %}
+
+{{ radiosData.items.push({ divider: "or"}) }}
+{{ 
+    radiosData.items.push({
+                        value: "LOOKUPDIFFERENT",
+                        text: "Lookup a different outcome",
+                        checked: overallCaseOutcome === "LOOKUPDIFFERENT"
+                        }) 
+}}
+
+
 {% block content %}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
@@ -19,56 +50,7 @@
                     {% endif %}
                 </span>
 
-                {{ govukRadios({
-                    name: "overallCaseOutcome",
-                    fieldset: {
-                        legend: {
-                        text: "Select the overall case outcome",
-                        isPageHeading: true,
-                        classes: "govuk-fieldset__legend--l"
-                        }
-                    },
-                    items: [
-                        {
-                        value: "Remand in Custody (Bail Refused)",
-                        text: "Remand in Custody (Bail Refused)",
-                        checked: overallCaseOutcome === "Remand in Custody (Bail Refused)"
-                        },
-                        {
-                        value: "Commit/Transfer/Send to Crown Court for Trial in Custody",
-                        text: "Commit/Transfer/Send to Crown Court for Trial in Custody",
-                        checked: overallCaseOutcome === "Commit/Transfer/Send to Crown Court for Trial in Custody"
-                        },
-                        {
-                        value: "Commit to Crown Court for Trial (Summary / Either Way Offences)",
-                        text: "Commit to Crown Court for Trial (Summary / Either Way Offences)",
-                        checked: overallCaseOutcome === "Commit to Crown Court for Trial (Summary / Either Way Offences)"
-                        },
-                        {
-                        value: "Recall to Prison",
-                        text: "Recall to Prison",
-                        checked: overallCaseOutcome === "Recall to Prison"
-                        },
-                        {
-                        value: "Sentence Postponed",
-                        text: "Sentence Postponed",
-                        checked: overallCaseOutcome === "Sentence Postponed"
-                        },
-                        {
-                        value: "Commit to Crown Court for Sentence in Custody",
-                        text: "Commit to Crown Court for Sentence in Custody",
-                        checked: overallCaseOutcome === "Commit to Crown Court for Sentence in Custody"
-                        },
-                        {
-                        divider: "or"
-                        },
-                        {
-                        value: "LOOKUPDIFFERENT",
-                        text: "Lookup a different outcome",
-                        checked: overallCaseOutcome === "LOOKUPDIFFERENT"
-                        }
-                    ]
-                    }) }}
+                {{ govukRadios(radiosData) }}
 
                 {{ govukButton({
                     text: "Continue"
