--- a/server/views/pages/courtAppearance/lookup-case-outcome.njk
+++ b/server/views/pages/courtAppearance/lookup-case-outcome.njk
@@ -30,44 +30,7 @@
                     },
                     id: "case-outcome",
                     name: "caseOutcome",
-                    items: [
-                        {
-                            text: "",
-                            selected: true
-                        },
-                        {
-                            value: "Remand in Custody (Bail Refused)",
-                            text: "Remand in Custody (Bail Refused)"
-                        },
-                        {
-                            value: "Commit/Transfer/Send to Crown Court for Trial in Custody",
-                            text: "Commit/Transfer/Send to Crown Court for Trial in Custody"
-                        },
-                        {
-                            value: "Commit to Crown Court for Trial (Summary / Either Way Offences)",
-                            text: "Commit to Crown Court for Trial (Summary / Either Way Offences)"
-                        },
-                        {
-                            value: "Recall to Prison",
-                            text: "Recall to Prison"
-                        },
-                        {
-                            value: "Sentence Postponed",
-                            text: "Sentence Postponed"
-                        },
-                        {
-                            value: "Commit to Crown Court for Sentence in Custody",
-                            text: "Commit to Crown Court for Sentence in Custody"
-                        },
-                        {
-                            value: "Adjournment",
-                            text: "Adjournment"
-                        },
-                        {
-                            value: "Remand on Conditional Bail",
-                            text: "Remand on Conditional Bail"
-                        }
-                    ]
+                    items: []
                 }) }}
 
                 {{ govukButton({
@@ -82,5 +45,5 @@
 
 {% block javascripts %}
     <script src="/assets/accessible-autocomplete.min.js"></script>
-    <script id="autocomplete-script" src="/assets/js/autoCompleteLookupCaseOutcome.js"></script>
+    <script id="autocomplete-script" src="/assets/js/autoCompleteLookupCaseOutcome.js" data-warrant-type="{{warrantType}}"></script>
 {% endblock %}
