--- a/server/views/pages/offence/delete-offence.njk
+++ b/server/views/pages/offence/delete-offence.njk
@@ -23,13 +23,7 @@
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-delete-offence">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <span class="govuk-caption-l">
-                    {% if isFirstAppearance %}
-                        Add an offence to court case {{ courtCaseUniqueIdentifier }}
-                        {% else %}
-                        Add an appearance to court case {{ courtCaseUniqueIdentifier }}
-                    {% endif %}
-                </span>
+                {% include "../../partials/offenceCaption.njk" %}
 
                 {{ govukRadios({
                     name: "deleteOffence",
