--- a/server/views/pages/offence/offence-date.njk
+++ b/server/views/pages/offence/offence-date.njk
@@ -8,13 +8,7 @@
 {% block pageContent %}
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-offence-date">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <span class="govuk-caption-l">
-                    {% if isFirstAppearance %}
-                        Add an offence to court case {{ courtCaseUniqueIdentifier }}
-                        {% else %}
-                        Add an appearance to court case {{ courtCaseUniqueIdentifier }}
-                    {% endif %}
-                </span>
+                {% include "../../partials/offenceCaption.njk" %}
 
                 {% call govukFieldset({
                     legend: {
