RASS-120 made outcomes come from service

--- a/server/views/pages/offence/offence-outcome.njk
+++ b/server/views/pages/offence/offence-outcome.njk
@@ -4,12 +4,7 @@
 
 {% set pageTitle = applicationName + " - Add a offence outcome" %}
 
-{% block pageContent %}
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-offence-outcome">
-                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {% include "../../partials/offenceCaption.njk" %}
-
-                {{ govukRadios({
+{% set radiosData = {
                     name: "offenceOutcome",
                     fieldset: {
                         legend: {
@@ -18,47 +13,33 @@
                         classes: "govuk-fieldset__legend--l"
                         }
                     },
-                    items: [
-                        {
-                        value: "Remand in Custody (Bail Refused)",
-                        text: "Remand in Custody (Bail Refused)",
-                        checked: offenceOutcome === "Remand in Custody (Bail Refused)"
-                        },
-                        {
-                        value: "Commit/Transfer/Send to Crown Court for Trial in Custody",
-                        text: "Commit/Transfer/Send to Crown Court for Trial in Custody",
-                        checked: offenceOutcome === "Commit/Transfer/Send to Crown Court for Trial in Custody"
-                        },
-                        {
-                        value: "Commit to Crown Court for Trial (Summary / Either Way Offences)",
-                        text: "Commit to Crown Court for Trial (Summary / Either Way Offences)",
-                        checked: offenceOutcome === "Commit to Crown Court for Trial (Summary / Either Way Offences)"
-                        },
-                        {
-                        value: "Recall to Prison",
-                        text: "Recall to Prison",
-                        checked: offenceOutcome === "Recall to Prison"
-                        },
-                        {
-                        value: "Sentence Postponed",
-                        text: "Sentence Postponed",
-                        checked: offenceOutcome === "Sentence Postponed"
-                        },
-                        {
-                        value: "Commit to Crown Court for Sentence in Custody",
-                        text: "Commit to Crown Court for Sentence in Custody",
-                        checked: offenceOutcome === "Commit to Crown Court for Sentence in Custody"
-                        },
-                        {
-                        divider: "or"
-                        },
-                        {
+                    items: []
+    } %}
+
+{% for caseOutcome in topCaseOutcomes %}
+    {%- set caseOutcomeRow = {
+        value: caseOutcome.description,
+        text: caseOutcome.description,
+        checked: caseOutcome.description === offenceOutcome
+    } -%}
+    {{ radiosData.items.push(caseOutcomeRow) }}
+{% endfor %}
+
+{{ radiosData.items.push({ divider: "or"}) }}
+{{ 
+    radiosData.items.push({
                         value: "LOOKUPDIFFERENT",
                         text: "Lookup a different outcome",
                         checked: offenceOutcome === "LOOKUPDIFFERENT"
-                        }
-                    ]
-                    }) }}
+                        }) 
+}}
+
+{% block pageContent %}
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-offence-outcome">
+                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+                {% include "../../partials/offenceCaption.njk" %}
+
+                {{ govukRadios(radiosData) }}
 
                 {{ govukButton({
                     text: "Continue"
