removed comments, correct title

--- a/server/views/pages/offence/sentence-length.njk
+++ b/server/views/pages/offence/sentence-length.njk
@@ -5,7 +5,7 @@
 
 
 
-{% set pageTitle = applicationName + " - Add a court case Count Number" %}
+{% set pageTitle = applicationName + " - Add sentence length" %}
 
 {% block pageContent %}
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-sentence-length">
