RASS-124 added alternative sentence length page

--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -16,4 +16,5 @@ $govuk-page-width: $moj-page-width;
 @import './components/footer';
 @import './components/content-top';
 @import './components/action-list';
+@import './components/alternative-sentence-length';
 @import 'assets/scss/local';
