--- a/assets/scss/components/_offence-card.scss
+++ b/assets/scss/components/_offence-card.scss
@@ -7,6 +7,21 @@
 	margin: 20px 0;
 }
 
+.sentence-card {
+	border-left: 4px solid #4c2c92 !important;
+	height: 100%;
+	display: table;
+}
+
+.sentence-card-select {
+    display: table-cell;
+	vertical-align: middle;
+}
+
+.sentence-card-select > .govuk-form-group {
+	margin-bottom: 0;
+}
+
 .offence-card dl {
 	font-size: 16px;
 }
