--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -1,6 +1,6 @@
 
 <span class="govuk-caption-l">
-    {% if isFirstAppearance %}
+    {% if isAddCourtCase %}
         {% if courtAppearance.warrantType === 'SENTENCING' %}
             Add sentences to a court case
         {% else %}
