--- a/server/views/pages/courtAppearance/court-name.njk
+++ b/server/views/pages/courtAppearance/court-name.njk
@@ -11,13 +11,7 @@
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-court-name{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <span class="govuk-caption-l">
-                    {% if isFirstAppearance %}
-                        Add a court case
-                        {% else %}
-                        Add an appearance to court case {{courtCaseUniqueIdentifier}}
-                    {% endif %}
-                </span>
+                {% include "../../partials/appearanceCaption.njk" %}
                 {{ govukSelect({
                     label: {
                         text: "What is the court name?",
