--- a/server/views/pages/courtAppearance/warrant-upload.njk
+++ b/server/views/pages/courtAppearance/warrant-upload.njk
@@ -7,13 +7,7 @@
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
             <form method="post" enctype="multipart/form-data" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-warrant-upload?_csrf={{ csrfToken }}{{ "&submitToCheckAnswers=true" if submitToCheckAnswers }}">
-                <span class="govuk-caption-l">
-                    {% if isFirstAppearance %}
-                        Add a court case
-                        {% else %}
-                        Add an appearance to court case {{courtCaseUniqueIdentifier}}
-                    {% endif %}
-                </span>
+                {% include "../../partials/appearanceCaption.njk" %}
                 {{ govukFileUpload({
                     id: "warrant-upload",
                     name: "warrantUpload",
