--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -4,7 +4,7 @@
         {% if courtAppearance.warrantType === 'SENTENCING' %}
             Add sentences to a court case
         {% else %}
-            Add an offence to court case {{ courtCaseUniqueIdentifier }}
+            Add offences to a court case
         {% endif %}
     {% else %}
         Add an appearance to court case {{ courtCaseUniqueIdentifier }}
