--- a/server/views/partials/prisonerBannerLayout.njk
+++ b/server/views/partials/prisonerBannerLayout.njk
@@ -11,14 +11,14 @@
             {% block banner %}
                 {{
                 prisonerBanner({
-                    firstName: prisonerDetails.firstName,
-                    lastName: prisonerDetails.lastName,
-                    offenderNo: prisonerDetails.offenderNo,
-                    establishment: prisonerDetails.establishment,
-                    cellNumber: prisonerDetails.cellNumber,
-                    dateOfBirth: prisonerDetails.dateOfBirth,
-                    pncNumber: prisonerDetails.pncNumber,
-                    status: prisonerDetails.status,
+                    firstName: prisoner.firstName,
+                    lastName: prisoner.lastName,
+                    offenderNo: prisoner.prisonerNumber,
+                    establishment: prisoner.prisonName,
+                    cellNumber: prisoner.cellLocation,
+                    dateOfBirth: prisoner.dateOfBirth,
+                    pncNumber: prisoner.pncNumber,
+                    status: prisoner.status,
                     digitalPrisonServicesUrl: digitalPrisonServicesUrl
                 })
                 }}
