fix heading styling

--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -8,7 +8,7 @@
 {% set pageTitle = applicationName + " - Home" %}
 
 {% block content %}
-    <h1>Court cases </h1>
+    <h1 class="govuk-heading-l">Court cases </h1>
     <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-two-thirds">
