clear other input if changed

--- a/server/views/pages/offence/offence-code.njk
+++ b/server/views/pages/offence/offence-code.njk
@@ -28,6 +28,7 @@
                     items: [
                         {
                             value: "true",
+                            id: "unknown-code",
                             text: "I do not have the offence code",
                             checked: offenceCodeForm.unknownCode
                         }
@@ -41,4 +42,8 @@
                 }) }}
             </form>
 
+{% endblock %}
+
+{% block javascripts %}
+    <script src="/assets/js/offenceCode.js"></script>
 {% endblock %}
