RASS-148 added case reference validation, content update

--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -19,15 +19,7 @@
 {% set offenceSentence = 'sentences' if courtAppearance.warrantType === 'SENTENCING' else 'offences' %}
 
 {% block content %}
-    
-        {% if errors | length %}
-            <div class="govuk-grid-row govuk-!-margin-top-4">
-                {{ govukErrorSummary({
-                    titleText: "There is a problem",
-                    errorList: errors
-                }) }}
-            </div>
-        {% endif %}
+    {{ super() }}
     
     <div class="govuk-grid-row govuk-!-margin-top-4">
 
