--- a/server/views/pages/courtAppearance/reference.njk
+++ b/server/views/pages/courtAppearance/reference.njk
@@ -1,11 +1,12 @@
 {% extends "../../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
-{% set pageTitle = applicationName + " - Add a court case reference number" %}
+{% set pageTitle = applicationName + " - Add a case reference" %}
 
 {% block content %}
-
+    {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-reference{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
@@ -13,12 +14,13 @@
                 {% include "../../partials/appearanceCaption.njk" %}
                 {{ govukInput({
                     label: {
-                        text: "Enter the court case reference number",
+                        text: "Enter the case reference",
                         classes: "govuk-label--l",
                         isPageHeading: true
                     },
                     id: "reference-number",
                     name: "referenceNumber",
+                    errorMessage: errors | findError('referenceNumber'),
                     value: caseReferenceNumber
                 }) }}
 
