--- a/server/views/pages/courtAppearance/warrant-type.njk
+++ b/server/views/pages/courtAppearance/warrant-type.njk
@@ -1,21 +1,10 @@
 {% extends "../../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
-{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
-
 
 {% set pageTitle = applicationName + " - warrant type page" %}
 {% block content %}
-
-    {% if errors | length %}
-            <div class="govuk-grid-row govuk-!-margin-top-4">
-                {{ govukErrorSummary({
-                    titleText: "There is a problem",
-                    errorList: errors
-                }) }}
-            </div>
-        {% endif %}
-
+    {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-warrant-type{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
