--- a/server/views/pages/courtAppearance/overall-case-outcome.njk
+++ b/server/views/pages/courtAppearance/overall-case-outcome.njk
@@ -7,6 +7,8 @@
 {% set pageTitle = applicationName + " - Add a court case outcome" %}
 
 {% set radiosData = {
+                    id: "overallCaseOutcome",
+                    errorMessage: errors | findError('overallCaseOutcome'),
                     name: "overallCaseOutcome",
                     fieldset: {
                         legend: {
