--- a/server/views/pages/courtAppearance/overall-case-outcome.njk
+++ b/server/views/pages/courtAppearance/overall-case-outcome.njk
@@ -7,6 +7,8 @@
 {% set pageTitle = applicationName + " - Add a court case outcome" %}
 
 {% set radiosData = {
+                    id: "overallCaseOutcome",
+                    errorMessage: errors | findError('overallCaseOutcome'),
                     name: "overallCaseOutcome",
                     fieldset: {
                         legend: {
@@ -38,6 +40,7 @@
 
 
 {% block content %}
+    {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-overall-case-outcome{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
