RASS-209 moved warrant type, added back button

--- a/server/views/partials/appearanceCaption.njk
+++ b/server/views/partials/appearanceCaption.njk
@@ -2,6 +2,6 @@
     {% if isAddCourtCase %}
         Add a court case
         {% else %}
-        Add an appearance to court case {{courtCaseUniqueIdentifier}}
+        Add an appearance
     {% endif %}
 </span>
