--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -180,7 +180,7 @@
                             actions: {
                                 items: [
                                 {
-                                    href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid + "/appearance/"+ courtCaseDetails.appearanceTotal + "/select-reference",
+                                    href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid + "/appearance/"+ courtCaseDetails.appearanceTotal + "/warrant-type",
                                     text: "Add an appearance",
                                     visuallyHiddenText: "Add an appearance"
                                 }]
@@ -203,7 +203,7 @@
             <div class="actions-list">
                 <ul class="govuk-list actions-list-list">
                     <span class="govuk-heading-m actions-list-header">Actions</span>
-                    <li><a href="/person/{{nomsId}}/add-court-case/{{newCourtCaseId}}/appearance/0/reference">Add a new court case</a></li>
+                    <li><a href="/person/{{nomsId}}/add-court-case/{{newCourtCaseId}}/appearance/0/warrant-type">Add a new court case</a></li>
                 </ul>
             </div>  
         </div>
